C: extract JoinModal from Events page

--- a/Client/Pages/Events.razor
+++ b/Client/Pages/Events.razor
@@ -10,10 +10,9 @@
 
 Welcome to your new app. Tohle by pak ideálně mělo nějaký "sortění", aby se dalo vybrat všechny/moje/účastním se/neúčastním se. Plus bych mohl vymyslet pagination, zakomponovanou rovnou v API, protože brzo asi bude hodně věcí. Tak uvidíme.
 
-here: @submittedValue
-
 <Button Type="ButtonType.Link" To="/soutez/nova" Color="ButtonColor.Primary">Vytvořit soutěž</Button>
 <Button Color="ButtonColor.Secondary" @onclick="ShowModal">Přidat se do soutěže</Button>
+<JoinEventModal @ref="JoinModal" User="U" />
 
 <CardGroup>
 
@@ -39,56 +38,13 @@ here: @submittedValue
 
 </CardGroup>
 
-<Modal @ref="JoinEventModal"
-       title="Připojit se do soutěže"
-       IsVerticallyCentered="true"
-       IsScrollable="true">
-    <BodyTemplate>
-        <div class="mb-3">
-            <label for="eventCode">Zadejte kód soutěže:</label>
-            <InputText id="eventCode" class="form-control" @bind-Value="inputValue" />
-            <small class="form-text text-muted">Kód je ve tvaru <code>aBy9x</code>, pět znaků.</small>
-        </div>
-
-        <div class="mb-3">
-            <label>Vyberte ptáčkaře:</label>
-                @if (U?.Watchers is not null)
-                {
-                    @foreach (var watcher in U.Watchers)
-                    {
-                        var localWatcherId = watcher.Id;
-
-                        <div class="form-check">
-                            <InputCheckbox class="form-check-input"
-                                           Value="watcherSelections[localWatcherId]"
-                                           ValueChanged="val => watcherSelections[localWatcherId] = val"
-                                           ValueExpression="() => watcherSelections[localWatcherId]" />
-                            <label class="form-check-label">
-                                @watcher.FirstName @watcher.LastName
-                            </label>
-                        </div>
-                    }
-                }
-            <small class="form-text text-muted">Zaškrtněte jednoho nebo více, za které se chcete připojit.</small>
-        </div>
-    </BodyTemplate>
-
-    <FooterTemplate>
-        <Button Color="ButtonColor.Secondary" @onclick="CloseModal">Zavřít</Button>
-        <Button Color="ButtonColor.Primary" @onclick="SubmitValue" Disabled="@IsSubmitDisabled">Uložit</Button>
-    </FooterTemplate>
-</Modal>
-
 
 @code {
     private UserDto? U = null;
     private ICollection<EventDto>? E = null;
     private List<ToastMessage> messages = new();
 
-    private Modal? JoinEventModal;
-    private string inputValue = string.Empty;
-    private Dictionary<int, bool> watcherSelections = new();
-    private string submittedValue = string.Empty;
+    private JoinEventModal? JoinModal = default;
 
     protected override async Task OnInitializedAsync()
     {
@@ -96,7 +52,6 @@ here: @submittedValue
         {
             U = await LocalStorage.GetItemAsync<UserDto>("userDto");
             if (U is null) throw new Exception("Cannot find userDto in local storage.");
-            watcherSelections = U!.Watchers?.ToDictionary(w => w.Id, w => U!.Watchers.Count() == 1 ? true : false) ?? new();
 
             var result = new List<EventDto>();
             var seenIds = new HashSet<int>();
@@ -140,43 +95,7 @@ here: @submittedValue
 
      private async Task ShowModal()
     {
-        if (JoinEventModal is not null)
-            await JoinEventModal.ShowAsync();
+        if (JoinModal is not null)
+            await JoinModal.ShowAsync(U);
     }
-
-    private async Task CloseModal()
-    {
-        if (JoinEventModal is not null)
-            await JoinEventModal.HideAsync();
-    }
-
-    private async Task SubmitValue()
-    {
-        var selectedWatcherIds = watcherSelections
-            .Where(kv => kv.Value)
-            .Select(kv => kv.Key)
-            .ToList();
-
-        if (!selectedWatcherIds.Any())
-            return;
-
-        foreach (var watcherId in selectedWatcherIds)
-        {
-            await JoinEventAsync(inputValue, watcherId);
-        }
-        await CloseModal();
-    }
-
-    private async Task JoinEventAsync(string evntPubId, int watcherId)
-    {
-        Console.WriteLine($"Joining with evntPubId {evntPubId} as watcher ID {watcherId}");
-        try{
-            await BAC.Watcher_JoinEventAsync(evntPubId, watcherId);
-        }catch (Exception ex){
-            Console.WriteLine(ex.Message);
-        }
-    }
-
-    private bool IsSubmitDisabled =>
-    string.IsNullOrWhiteSpace(inputValue) || !watcherSelections.Values.Any(v => v);
 }
