--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -12,5 +12,6 @@
 @using BirdWatching.Shared.Model
 @using BirdWatching.Shared.Api
 @using Newtonsoft.Json
+@using System.Text.Json
 @using BlazorBootstrap
 @using Blazored.LocalStorage
