--- a/Client/Pages/Home.razor
+++ b/Client/Pages/Home.razor
@@ -1,6 +1,7 @@
 @page "/"
 @inject NavigationManager NavManager
 @inject Blazored.LocalStorage.ILocalStorageService LocalStorage
+@inject BirdApiClient BAC
 
 <PageTitle>Home</PageTitle>
 
@@ -9,6 +10,7 @@
 Welcome @(UserDto?.UserName ?? "here")!
 
 <Button Color="ButtonColor.Danger" Size="ButtonSize.ExtraLarge" @onclick="LogOut">Odhlásit se</Button>
+<Button Color="ButtonColor.Primary" Size="ButtonSize.ExtraLarge" @onclick="AddRecord">Odhlásit se</Button>
 
 @code{
     private UserDto? UserDto = null;
@@ -22,5 +24,9 @@ Welcome @(UserDto?.UserName ?? "here")!
         await LocalStorage.RemoveItemAsync("authTokenExpireAt");
 
         NavManager.NavigateTo("/login");
+    }
+
+    private async Task AddRecord(){
+       await BAC.Record_CreateAsync(new RecordDto()); // TODO
     }
 }
