--- a/Client/Pages/Watchers.razor
+++ b/Client/Pages/Watchers.razor
@@ -8,19 +8,26 @@
 
 Welcome to your new app.
 
-<CardGroup>
-
-    @foreach (var watcherDto in W ?? Array.Empty<WatcherDto>())
+<div class="row">
+    @if (W is null || !W.Any())
     {
-        <Card Style="width:18rem;">
-            <CardBody>
-                <CardTitle>@watcherDto.FirstName @watcherDto.LastName</CardTitle>
-                <CardText>@watcherDto.PublicIdentifier</CardText>
-                <Button Color="ButtonColor.Primary" To=@($"/ptackar/{watcherDto.PublicIdentifier}/{watcherDto.Id}")
-                    Type="ButtonType.Link">Zobrazit</Button>
-            </CardBody>
-        </Card>
+        <p>Žádní ptáčkaři...</p>
     }
-
-</CardGroup>
+    else
+    {
+        @foreach (var watcherDto in W ?? Array.Empty<WatcherDto>())
+        {
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+                <Card class="h-100">
+                    <CardBody>
+                        <CardTitle>@watcherDto.FirstName @watcherDto.LastName</CardTitle>
+                        <CardText>@watcherDto.PublicIdentifier</CardText>
+                        <Button Color="ButtonColor.Primary" To=@($"/ptackar/{watcherDto.PublicIdentifier}/{watcherDto.Id}")
+                            Type="ButtonType.Link">Zobrazit</Button>
+                    </CardBody>
+                </Card>
+            </div>
+        }
+    }
+</div>
 
