C: menu > add record

--- a/Client/Layout/MainLayout.razor
+++ b/Client/Layout/MainLayout.razor
@@ -49,7 +49,8 @@
             new NavItem { Id = "2", Href = "/ptackari", IconName = IconName.PeopleFill, Text = "ptackari"},
             new NavItem { Id = "3", Href = "/souteze", IconName = IconName.CalendarCheckFill, Text = "souteze"},
             new NavItem { Id = "4", Href = "/nastaveni", IconName = IconName.GearFill, Text = "nastaveni"},
-            new NavItem { Id = "5", Href = "/ptacci", IconName = IconName.GearFill, Text = "ptacci"}
+            new NavItem { Id = "5", Href = "/ptacci", IconName = IconName.Twitter, Text = "ptacci"},
+            new NavItem { Id = "6", Href = "/zaznam/novy", IconName = IconName.PlusSquareFill, Text = "novy zaznam"}
         };
 
         return navItems;
