--- a/Client/Pages/Settings.razor
+++ b/Client/Pages/Settings.razor
@@ -1,4 +1,6 @@
 @page "/nastaveni"
+@inject Blazored.LocalStorage.ILocalStorageService LocalStorage
+@inject NavigationManager NavManager
 
 <PageTitle>Nastavení</PageTitle>
 
