C: show error messages

--- a/Client/Components/LoginForm.razor
+++ b/Client/Components/LoginForm.razor
@@ -53,6 +53,9 @@
                 ErrorMessage = "Invalid login.";
             }
         }
+        catch (ApiException<ProblemDetails> ex){
+            ErrorMessage = ex.Result?.Detail ?? "Neznámá chyba.";
+        }
         catch (ApiException ex)
         {
             ErrorMessage = $"Login failed: {ex.Message}";
